<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_OVN" Id="{e2d02fca-0bf5-461e-a652-5b67acf96dd4}">
    <Declaration><![CDATA[TYPE T_OVN :
STRUCT
	io		: T_OVN_IO;
	ctrl	: T_OVN_CTRL;
	id		: T_OVN_ID;
	datachn	: T_OVN_DATACHN;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>