<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_OVN_IO" Id="{d4e76a40-f511-4403-89cf-c0997e08e560}">
    <Declaration><![CDATA[TYPE T_OVN_IO :
STRUCT
	Out_uinBcrOvenAEvent: REFERENCE TO UINT;
	Out_udiBcrOvenACode: REFERENCE TO ULINT;
	Out_uinBcrOvenBEvent: REFERENCE TO UINT;
	Out_udiBcrOvenBCode: REFERENCE TO ULINT;
	In_bolBcrDistributionTrigger: REFERENCE TO BOOL;
	In_udiBarcode_new_1: REFERENCE TO ULINT;
	In_udiBarcode_new_2: REFERENCE TO ULINT;
	In_uinNew_element_1: REFERENCE TO UINT;
	In_uinNew_element_2: REFERENCE TO UINT;
	In_udiBarcode_delete_1: REFERENCE TO ULINT;
	In_udiBarcode_delete_2: REFERENCE TO ULINT;
	In_uinDelete_element_1: REFERENCE TO UINT;
	In_uinDelete_element_2: REFERENCE TO UINT;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>