<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <POU Name="cycle_Ovn" Id="{07764068-9f3b-402f-b763-d5a9ae0a908c}">
    <Declaration><![CDATA[FUNCTION cycle_Ovn : BOOL
VAR_INPUT
	pOvn: POINTER TO T_OVN;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[pOvn^.ctrl.fbOvn_Ibh();

pOvn^.ctrl.fbOvn.In_iStatus := pOvn^.ctrl.fbOvn_Ibh.Out_iStatus;
pOvn^.ctrl.fbOvn.In_bOff := pOvn^.ctrl.fbOvn_Ibh.Out_bOff;
pOvn^.ctrl.fbOvn.In_bBeltOn := pOvn^.ctrl.fbOvn_Ibh.Out_bBeltOn;
pOvn^.ctrl.fbOvn.In_bManual := pOvn^.ctrl.fbOvn_Ibh.Out_bManual;
pOvn^.ctrl.fbOvn.In_bRun := pOvn^.ctrl.fbOvn_Ibh.Out_bRun;
pOvn^.ctrl.fbOvn.In_bAckError := pOvn^.ctrl.fbOvn_Ibh.Out_bAckError;
pOvn^.ctrl.fbOvn.In_adiTemp_dc := pOvn^.ctrl.fbOvn_Ibh.Out_adiTemp_dc;
pOvn^.ctrl.fbOvn.In_adiAir_p := pOvn^.ctrl.fbOvn_Ibh.Out_adiAir_p;
pOvn^.ctrl.fbOvn.In_diSpeed_mm_min := pOvn^.ctrl.fbOvn_Ibh.Out_diSpeed_mm_min;
pOvn^.ctrl.fbOvn.In_iErrorLevel := pOvn^.ctrl.fbOvn_Ibh.Out_iErrorLevel;
pOvn^.ctrl.fbOvn.In_iErrorID := pOvn^.ctrl.fbOvn_Ibh.Out_iErrorID;
pOvn^.ctrl.fbOvn.In_bDriverConnected := pOvn^.ctrl.fbOvn_Ibh.Out_bDriverConnected;
pOvn^.ctrl.fbOvn.In_bDriverError := pOvn^.ctrl.fbOvn_Ibh.Out_bDriverError;
pOvn^.ctrl.fbOvn.In_udiDriverErrorID := pOvn^.ctrl.fbOvn_Ibh.Out_udiDriverErrorID;

//... := pOvn^.io.In_bolBcrDistributionTrigger;	//TODO
pOvn^.ctrl.fbOvn.In_uliBarcodeNew_1 := pOvn^.io.In_udiBarcode_new_1;
pOvn^.ctrl.fbOvn.In_uliBarcodeNew_2 := pOvn^.io.In_udiBarcode_new_2;
pOvn^.ctrl.fbOvn.In_uiNewElement_1 := pOvn^.io.In_uinNew_element_1;
pOvn^.ctrl.fbOvn.In_uiNewElement_2 := pOvn^.io.In_uinNew_element_2;
pOvn^.ctrl.fbOvn.In_uliBarcodeDelete_1 := pOvn^.io.In_udiBarcode_delete_1;
pOvn^.ctrl.fbOvn.In_uliBarcodeDelete_2 := pOvn^.io.In_udiBarcode_delete_2;
pOvn^.ctrl.fbOvn.In_uiDeleteElement_1 := pOvn^.io.In_uinDelete_element_1;
pOvn^.ctrl.fbOvn.In_uiDeleteElement_2 := pOvn^.io.In_uinDelete_element_2;

pOvn^.ctrl.fbOvn();

//pOvn^.io.Out_uinBcrOvenAEvent := ...;	//TODO
//pOvn^.io.Out_udiBcrOvenACode := ...;	//TODO
//pOvn^.io.Out_uinBcrOvenBEvent := ...;	//TODO
//pOvn^.io.Out_udiBcrOvenBCode := ...;	//TODO

pOvn^.datachn.rSendData.fbFifo();]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>